RoboViz distributed code into multiple files
This is done for abstraction purposes, so that the code can be shared
among multiple executables

--- a/ext/RoboViz/.gitignore
+++ b/ext/RoboViz/.gitignore
@@ -1,8 +1,7 @@
-# where CMake is usually ran
+# CMake
 build/
-
-# CMake will generate binaries here
 bin/
-
-# CMake will generate static libraries here
 lib/
+
+# Platform
+.vscode
