orientation retireval and dynamic leg update works

--- a/ext/RoboViz/CMakeLists.txt
+++ b/ext/RoboViz/CMakeLists.txt
@@ -5,9 +5,11 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 find_package(SDL3 CONFIG REQUIRED)
 find_package(GLider CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
+find_package(Asio MODULE REQUIRED)
 
 include(GNUInstallDirs)
 
