--- a/stm32/cube/.project
+++ b/stm32/cube/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Robodog</name>
+	<name>cube</name>
 	<comment></comment>
 	<projects>
 	</projects>
