--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "stm32/platformio/lib/cglm"]
 	path = stm32/platformio/lib/cglm
 	url = https://github.com/recp/cglm.git
+[submodule "stm32/platformio/lib/glm"]
+	path = stm32/platformio/lib/glm
+	url = https://github.com/g-truc/glm.git
+	branch = master
