--- a/stm32/platformio/platformio.ini
+++ b/stm32/platformio/platformio.ini
@@ -14,4 +14,6 @@ board = nucleo_f446ze
 framework = stm32cube
 monitor_speed = 115200
 board_build.stm32cube.custom_config_header = yes
-build_flags = -Wl,-u_printf_float
+build_flags = 
+    -Wl,-u_printf_float
+    -DENABLE_DEBUG
