Organize platformio project + WIP checkpoint: servo working, calibration 4/12

--- a/stm32/platformio/platformio.ini
+++ b/stm32/platformio/platformio.ini
@@ -13,7 +13,11 @@ platform = ststm32
 board = nucleo_f446ze
 framework = stm32cube
 monitor_speed = 115200
+monitor_raw = true
 board_build.stm32cube.custom_config_header = yes
+build_unflags = -std=gnu++11
 build_flags = 
+    -std=gnu++17
     -Wl,-u_printf_float
     -DENABLE_DEBUG
+    -Iinclude/stm
