Better handling of different dog modes, status LEDs, more logging

--- a/stm32/platformio/platformio.ini
+++ b/stm32/platformio/platformio.ini
@@ -19,5 +19,5 @@ build_unflags = -std=gnu++11
 build_flags = 
     -std=gnu++17
     -Wl,-u_printf_float
-    ; -DENABLE_DEBUG
+    -DENABLE_DEBUG
     -Iinclude/stm
